# stream-chat-terminal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-cd.yml
src/: config.rs  google_oauth.rs  lib.rs  main.rs  parser.rs  youtube.rs  youtube_wrapper.rs
src/youtube/: client.rs  structs.rs  tests.rs
