[package]
name = "stream-chat-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.137", features = ["derive"]}
chrono = "0.4"
confy = "0.5.1"
clap = { version = "4.2.1", features = ["derive"] }
oauth2 = "4.3.0"
url = "2.3.1"
ansi_term = "0.12.1"
google-youtube3 = "5.0.2"
tokio = { version = "1", features = ["full"] }
google-clis-common = "5.0.0"